# Intelligent-Account-Servicing

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
backend/: main.py
backend/agents/: __init__.py  confidence_scorer.py  document_processor.py  summary_agent.py  validation_agent.py
backend/api/: __init__.py  routes.py
backend/data/: banking_system.db
backend/models/: __init__.py  schemas.py
backend/services/: __init__.py  ai_pipeline.py  audit.py  database.py  rps_mock.py
data/logs/: b3fa1d28-2bd7-4d09-9b31-67bc878691f6.json
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/pages/: CheckerPage.tsx  DashboardPage.tsx  IntakePage.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
