[project]
name = "intelligent-account-servicing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "contractions>=0.1.73",
    "faiss-cpu>=1.13.2",
    "fastapi[standard]>=0.135.3",
    "flashrank>=0.2.10",
    "gradio>=6.11.0",
    "langchain>=1.2.15",
    "langchain-classic>=1.0.3",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.28",
    "langchain-experimental>=0.4.1",
    "langchain-groq>=1.1.2",
    "langchain-ollama>=1.1.0",
    "langchain-text-splitters>=1.1.1",
    "nltk>=3.9.4",
    "psycopg2-binary>=2.9.11",
    "pypdf>=6.9.2",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.2.2",
    "python-telegram-bot>=22.7",
    "ragas>=0.4.3",
    "requests>=2.33.1",
    "sentence-transformers>=5.4.0",
    "sqlite-vec>=0.1.9",
    "uvicorn>=0.44.0",
]
